Make minor corrections in Section 9.2

--- a/9-2-load-balancing-with-multiple-dispatchers/compute-and-plot.ipynb
+++ b/9-2-load-balancing-with-multiple-dispatchers/compute-and-plot.ipynb
@@ -13,12 +13,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This Notebook plots the numerical results for Section 9.2 of the Ph.D. thesis *Resource management in computer clusters: algorithm design and performance analysis* by Céline Comte. The commented code loads simulation results that might be added later."
+    "This Notebook plots the numerical results of Section 9.2 in the Ph.D. thesis *Resource management in computer clusters: algorithm design and performance analysis* by Céline Comte. The commented code loads simulation results that might be added later."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Package imports and global variable definitions"
    ]
@@ -28,9 +30,10 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T11:31:19.914394Z",
-     "start_time": "2019-09-12T11:31:19.308126Z"
-    }
+     "end_time": "2019-09-16T15:15:41.536631Z",
+     "start_time": "2019-09-16T15:15:40.933552Z"
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -51,9 +54,10 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T11:31:19.920652Z",
-     "start_time": "2019-09-12T11:31:19.916930Z"
+     "end_time": "2019-09-16T15:15:41.543375Z",
+     "start_time": "2019-09-16T15:15:41.539031Z"
     },
+    "hidden": true,
     "hide_input": false
    },
    "outputs": [],
@@ -71,9 +75,10 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T11:31:19.961159Z",
-     "start_time": "2019-09-12T11:31:19.923128Z"
-    }
+     "end_time": "2019-09-16T15:15:41.589006Z",
+     "start_time": "2019-09-16T15:15:41.546395Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -86,9 +91,10 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T11:31:19.968860Z",
-     "start_time": "2019-09-12T11:31:19.963553Z"
-    }
+     "end_time": "2019-09-16T15:15:41.597160Z",
+     "start_time": "2019-09-16T15:15:41.592018Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -100,28 +106,37 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Function definitions"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "All numerical results are for two dispatchers only. Incoming jobs have no assignment constraints, so that they are only rejected if their dispatcher is empty of tokens. We also assume that all computers have the same unit capacity $\\mu = 1$."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
     "### Single dispatcher"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Compute the normalization constant in a cluster with a single dispatcher."
    ]
@@ -131,10 +146,11 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T11:31:19.983523Z",
-     "start_time": "2019-09-12T11:31:19.971754Z"
+     "end_time": "2019-09-16T15:15:41.619797Z",
+     "start_time": "2019-09-16T15:15:41.600738Z"
     },
-    "code_folding": []
+    "code_folding": [],
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -171,14 +187,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
     "### Multiple dispatchers with a static routing"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "We first apply Equation (9.10) of the manuscript with $R = 2$ dispatchers. Since jobs have no compatibility constraints, the balance functions $\\Lambda_1$ and $\\Lambda_2$ defined in (9.11) have the form (1.8).\n",
     "We obtain that the normalizing constant is given by\n",
@@ -190,13 +211,15 @@
     "\\prod_{i \\in \\mathcal{I}}\n",
     "\\left( \\frac{p_1 \\mu}{\\nu_1} \\right)^{y_{1,i}} \\left( \\frac{p_2 \\mu}{\\nu_2} \\right)^{y_{2,i}}.\n",
     "\\end{align*}\n",
-    "If we compute $G$ by summing over all values of $y_1 + y_2 \\le \\ell$, the complexity is $O(\\ell_1 \\cdots \\ell_I)$, which is too high with the values we consider (with $I = 10$ and $\\ell_1 = \\ldots = \\ell_I = 6$, we obtain $\\ell_1 \\cdots \\ell_I = 6^{10} \\approx 6.05 \\times10^7$).\n",
+    "If we compute $G$ by explicitly summing over all values $y_1 + y_2 \\le \\ell$, the complexity is $O(\\ell_1 \\cdots \\ell_I)$, which is too high with the values we consider (with $I = 10$ and $\\ell_1 = \\ldots = \\ell_I = 6$, we obtain $\\ell_1 \\cdots \\ell_I = 6^{10} \\approx 6.05 \\times10^7$).\n",
     "The method we now describe allows us to obtain the same result with a complexity $O(I^3 \\times \\max(\\ell_1,\\ldots,\\ell_I)^4)$."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "We let $\\gamma_1 = \\frac{p_1 \\mu}{\\nu_1}$ and $\\gamma_2 = \\frac{p_2 \\mu}{\\nu_2}$,\n",
     "so that $G$ can be rewritten as\n",
@@ -212,7 +235,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "We rewrite this as\n",
     "$$\n",
@@ -234,7 +259,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "We will compute $G^I_{m_1, m_2}$\n",
     "for each $m_1 = 0, \\ldots, \\ell_1 + \\ldots \\ell_i$\n",
@@ -293,10 +320,11 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T11:31:20.005885Z",
-     "start_time": "2019-09-12T11:31:19.986627Z"
+     "end_time": "2019-09-16T15:15:41.641945Z",
+     "start_time": "2019-09-16T15:15:41.623044Z"
     },
-    "code_folding": []
+    "code_folding": [],
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -339,9 +367,10 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T11:31:20.032708Z",
-     "start_time": "2019-09-12T11:31:20.015891Z"
-    }
+     "end_time": "2019-09-16T15:15:41.655118Z",
+     "start_time": "2019-09-16T15:15:41.645358Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -357,14 +386,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
     "### Multple dispatchers with a dynamic routing"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "We let $q = (q_1,\\ldots,q_I)$.\n",
     "We have $\\mu_i = \\mu$ for each $i \\in \\mathcal{I}$.\n",
@@ -396,7 +430,7 @@
     "\t\t\\binom{\\ell_i - y_{1,i} - y_{2,i}}{q_i - y_{1,i}, q_i - y_{2,i}}.\n",
     "\t\\end{aligned}\n",
     "\\end{align*}\n",
-    "We can rewrite this as\n",
+    "We can rewrite this sum as\n",
     "\\begin{align*}\n",
     "\tG = \\sum_{\\substack{m_1, m_2 \\in \\mathbb{N}: \\\\\n",
     "\t\t\tm_1 \\le q_1 + \\ldots + q_I, \\\\\n",
@@ -456,10 +490,11 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T11:31:20.069336Z",
-     "start_time": "2019-09-12T11:31:20.039237Z"
+     "end_time": "2019-09-16T15:15:41.681438Z",
+     "start_time": "2019-09-16T15:15:41.660195Z"
     },
-    "code_folding": []
+    "code_folding": [],
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -507,9 +542,10 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T11:31:20.100491Z",
-     "start_time": "2019-09-12T11:31:20.078167Z"
-    }
+     "end_time": "2019-09-16T15:15:41.693293Z",
+     "start_time": "2019-09-16T15:15:41.685245Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -523,14 +559,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Numerical results"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
     "### Balanced arrivals"
    ]
@@ -540,9 +581,10 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T11:31:20.111533Z",
-     "start_time": "2019-09-12T11:31:20.104439Z"
-    }
+     "end_time": "2019-09-16T15:15:41.707797Z",
+     "start_time": "2019-09-16T15:15:41.696338Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -556,9 +598,10 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T11:31:59.363739Z",
-     "start_time": "2019-09-12T11:31:20.114828Z"
-    }
+     "end_time": "2019-09-16T15:16:27.027354Z",
+     "start_time": "2019-09-16T15:15:41.711791Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -571,9 +614,10 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T11:31:59.614667Z",
-     "start_time": "2019-09-12T11:31:59.365404Z"
-    }
+     "end_time": "2019-09-16T15:16:27.332169Z",
+     "start_time": "2019-09-16T15:16:27.028932Z"
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -603,7 +647,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
     "### Imbalanced arrivals"
    ]
@@ -613,9 +660,10 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T11:31:59.618860Z",
-     "start_time": "2019-09-12T11:31:59.616247Z"
-    }
+     "end_time": "2019-09-16T15:16:27.343589Z",
+     "start_time": "2019-09-16T15:16:27.334710Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -629,9 +677,10 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T11:32:58.092257Z",
-     "start_time": "2019-09-12T11:31:59.621024Z"
-    }
+     "end_time": "2019-09-16T15:17:33.197481Z",
+     "start_time": "2019-09-16T15:16:27.346300Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -645,9 +694,10 @@
    "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T11:32:58.402299Z",
-     "start_time": "2019-09-12T11:32:58.093934Z"
-    }
+     "end_time": "2019-09-16T15:17:33.529028Z",
+     "start_time": "2019-09-16T15:17:33.199071Z"
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -678,7 +728,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
     "### Homogeneous"
    ]
@@ -688,9 +741,10 @@
    "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T11:32:58.407288Z",
-     "start_time": "2019-09-12T11:32:58.404323Z"
-    }
+     "end_time": "2019-09-16T15:17:33.533207Z",
+     "start_time": "2019-09-16T15:17:33.530705Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -704,9 +758,10 @@
    "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T11:33:29.095375Z",
-     "start_time": "2019-09-12T11:32:58.409445Z"
-    }
+     "end_time": "2019-09-16T15:18:05.755975Z",
+     "start_time": "2019-09-16T15:17:33.534894Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -719,9 +774,10 @@
    "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T11:33:29.367179Z",
-     "start_time": "2019-09-12T11:33:29.097145Z"
-    }
+     "end_time": "2019-09-16T15:18:06.004944Z",
+     "start_time": "2019-09-16T15:18:05.757946Z"
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -752,7 +808,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
     "### Heterogeneous"
    ]
@@ -762,9 +821,10 @@
    "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T11:33:29.376751Z",
-     "start_time": "2019-09-12T11:33:29.372797Z"
-    }
+     "end_time": "2019-09-16T15:18:06.011246Z",
+     "start_time": "2019-09-16T15:18:06.007673Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -778,9 +838,10 @@
    "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T11:34:14.766366Z",
-     "start_time": "2019-09-12T11:33:29.379917Z"
-    }
+     "end_time": "2019-09-16T15:18:54.576613Z",
+     "start_time": "2019-09-16T15:18:06.013306Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -794,9 +855,10 @@
    "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T11:34:15.020189Z",
-     "start_time": "2019-09-12T11:34:14.767963Z"
-    }
+     "end_time": "2019-09-16T15:18:54.828172Z",
+     "start_time": "2019-09-16T15:18:54.578238Z"
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -832,9 +894,10 @@
    "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T11:34:15.035169Z",
-     "start_time": "2019-09-12T11:34:15.022915Z"
-    }
+     "end_time": "2019-09-16T15:18:54.843030Z",
+     "start_time": "2019-09-16T15:18:54.830836Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
