Minor corrections in Notebooks

--- a/5-performance-analysis-by-state-aggregation/plot.ipynb
+++ b/5-performance-analysis-by-state-aggregation/plot.ipynb
@@ -18,9 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Package imports"
    ]
@@ -30,10 +28,9 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-16T12:10:42.427999Z",
-     "start_time": "2019-09-16T12:10:41.949317Z"
-    },
-    "hidden": true
+     "end_time": "2019-10-23T07:00:09.493129Z",
+     "start_time": "2019-10-23T07:00:08.597612Z"
+    }
    },
    "outputs": [
     {
@@ -53,10 +50,9 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-16T12:10:42.432637Z",
-     "start_time": "2019-09-16T12:10:42.429720Z"
-    },
-    "hidden": true
+     "end_time": "2019-10-23T07:00:09.498794Z",
+     "start_time": "2019-10-23T07:00:09.495634Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -73,10 +69,9 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-16T12:10:42.618097Z",
-     "start_time": "2019-09-16T12:10:42.434383Z"
-    },
-    "hidden": true
+     "end_time": "2019-10-23T07:00:10.266934Z",
+     "start_time": "2019-10-23T07:00:09.500815Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -89,10 +84,9 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-16T12:10:42.622480Z",
-     "start_time": "2019-09-16T12:10:42.620090Z"
-    },
-    "hidden": true
+     "end_time": "2019-10-23T07:00:10.276489Z",
+     "start_time": "2019-10-23T07:00:10.269768Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -102,18 +96,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## A small example"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "100 servers, 100 classes of each type, one type with degree 1, another with degree 2."
    ]
@@ -123,10 +113,9 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-16T12:10:42.651666Z",
-     "start_time": "2019-09-16T12:10:42.624680Z"
-    },
-    "hidden": true
+     "end_time": "2019-10-23T07:00:10.529861Z",
+     "start_time": "2019-10-23T07:00:10.279435Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -144,11 +133,10 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-16T12:10:42.936432Z",
-     "start_time": "2019-09-16T12:10:42.654188Z"
+     "end_time": "2019-10-23T07:00:10.855905Z",
+     "start_time": "2019-10-23T07:00:10.531783Z"
     },
-    "code_folding": [],
-    "hidden": true
+    "code_folding": []
    },
    "outputs": [
     {
@@ -185,18 +173,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## An intermediate example"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "500 servers, 500 classes of each type, one type with degree 1, another with degree 2."
    ]
@@ -206,11 +190,10 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-16T12:10:42.954175Z",
-     "start_time": "2019-09-16T12:10:42.938780Z"
+     "end_time": "2019-10-23T07:00:10.873045Z",
+     "start_time": "2019-10-23T07:00:10.857821Z"
     },
-    "code_folding": [],
-    "hidden": true
+    "code_folding": []
    },
    "outputs": [],
    "source": [
@@ -228,10 +211,9 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-16T12:10:43.228874Z",
-     "start_time": "2019-09-16T12:10:42.957075Z"
-    },
-    "hidden": true
+     "end_time": "2019-10-23T07:00:11.228202Z",
+     "start_time": "2019-10-23T07:00:10.876366Z"
+    }
    },
    "outputs": [
     {
@@ -268,18 +250,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## A large example (presented in Section 5.4 of the manuscript)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "10000 servers, 1000 classes of each type, one type with degree 20, another with degree 40."
    ]
@@ -289,10 +267,9 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-16T12:10:43.244267Z",
-     "start_time": "2019-09-16T12:10:43.230535Z"
-    },
-    "hidden": true
+     "end_time": "2019-10-23T07:00:11.247573Z",
+     "start_time": "2019-10-23T07:00:11.231171Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -309,11 +286,10 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-16T12:10:43.499587Z",
-     "start_time": "2019-09-16T12:10:43.246400Z"
+     "end_time": "2019-10-23T07:00:11.587353Z",
+     "start_time": "2019-10-23T07:00:11.249914Z"
     },
-    "code_folding": [],
-    "hidden": true
+    "code_folding": []
    },
    "outputs": [
     {
