--- a/6-performance-analysis-by-server-elimination/compute_and_plot.ipynb
+++ b/6-performance-analysis-by-server-elimination/compute_and_plot.ipynb
@@ -13,7 +13,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This Notebook computes and plots the numerical results of Chapter 6 in the Ph.D. thesis *Resource management in computer clusters: algorithm design and performance analysis* by Céline Comte. Sections 1 and 2 of this Notebook define functions for computing the results, while Sections 3 and 4 effectively plot them. In parentheses, next to each section title, we give the reference of the corresponding section or subsection in the manuscript. We are interested by the probability $\\psi$ that the queue is empty and the expected number $L$ of customers in the queue."
+    "This Notebook computes and plots the numerical results of Chapter 6 in the Ph.D. thesis *Resource management in computer clusters: algorithm design and performance analysis* by Céline Comte. Sections 1 and 2 of this Notebook define functions for computing the results, while Sections 3 and 4 effectively plot them. In parentheses, next to each section title, we give the reference to the corresponding section or subsection in the manuscript. We are interested by the probability $\\psi$ that the queue is empty and the expected number $L$ of customers in the queue."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "## Package imports"
    ]
   },
   {
@@ -21,9 +30,10 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-16T13:06:35.129876Z",
-     "start_time": "2019-09-16T13:06:34.528006Z"
+     "end_time": "2019-10-23T08:05:50.278406Z",
+     "start_time": "2019-10-23T08:05:49.708705Z"
     },
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [],
@@ -38,9 +48,10 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-16T13:06:35.135760Z",
-     "start_time": "2019-09-16T13:06:35.132726Z"
-    }
+     "end_time": "2019-10-23T08:05:50.282853Z",
+     "start_time": "2019-10-23T08:05:50.280095Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -49,9 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## 1. Random customer assignment (Section 6.2)"
    ]
@@ -59,8 +68,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### Homogeneous queue (Subsection 6.2.1)"
@@ -99,7 +107,7 @@
     "    = \\frac{s-1}{s-r} \\frac{ ((s-1)-1)! }{ (r-1)! ((s-1)-r)! }\n",
     "    = \\left( 1 + \\frac{r-1}{s-r} \\right) b_{s-1}.\n",
     "$$\n",
-    "We use this last equality to compute recursively $b_s$ for each $s = r+1,\\ldots,S$."
+    "We use this last equality to recursively compute $b_s$ for each $s = r+1,\\ldots,S$."
    ]
   },
   {
@@ -107,8 +115,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-16T13:06:35.146584Z",
-     "start_time": "2019-09-16T13:06:35.139085Z"
+     "end_time": "2019-10-23T08:05:50.341484Z",
+     "start_time": "2019-10-23T08:05:50.285864Z"
     },
     "hidden": true
    },
@@ -125,8 +133,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### Heterogeneous degrees (Subsection 6.2.2)"
@@ -177,9 +184,12 @@
     "$$\n",
     "Then we let $w_s = b_{1,s} + \\ldots + b_{K,s}$ for each $s = 1,\\ldots,S$.\n",
     "\n",
-    "We can express all metrics as functions of these quantities, as we have:\n",
+    "We can express all metrics as functions of these quantities, as we have\n",
     "$\\rho_{|s} = \\rho \\cdot w_s$\n",
-    "and $\\rho_{k|s} = \\frac{ \\rho \\cdot b_{k,s} }{ 1 - \\rho (w_s - b_{k,s}) }$."
+    "and\n",
+    "$$\n",
+    "\\rho_{k|s} = \\frac{ \\rho \\cdot b_{k,s} }{ 1 - \\rho (w_s - b_{k,s}) }.\n",
+    "$$"
    ]
   },
   {
@@ -187,8 +197,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-16T13:06:35.161449Z",
-     "start_time": "2019-09-16T13:06:35.149516Z"
+     "end_time": "2019-10-23T08:05:50.403764Z",
+     "start_time": "2019-10-23T08:05:50.343987Z"
     },
     "hidden": true
    },
@@ -247,8 +257,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-16T13:06:35.169748Z",
-     "start_time": "2019-09-16T13:06:35.163587Z"
+     "end_time": "2019-10-23T08:05:50.459046Z",
+     "start_time": "2019-10-23T08:05:50.409921Z"
     }
    },
    "outputs": [],
@@ -265,7 +275,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For each $t \\in 1..S-r+1$, the expected number of class-$t$ customers in the queue is $L_{t} = L_{t|1..S}$, where\n",
+    "For each $t = 1, \\ldots, S-r+1$, the expected number of class-$t$ customers in the queue is $L_{t} = L_{t|1..S}$, where\n",
     "\\begin{equation}\n",
     "\tL_{t | 1..s} = \\frac{ \\displaystyle\n",
     "\t\t\\frac\\rho{ 1 - \\frac{r-1}S }\n",
@@ -276,6 +286,7 @@
     "\t\t{ \\psi_{|1..u-1} \\psi_{|1..s-u} }\n",
     "\t\t\\right)\n",
     "\t}{ s (1 - \\rho_{|1..s}) },\n",
+    "    \\quad \\forall s = t, \\ldots, S,\n",
     "\\end{equation}\n",
     "with the base case $L_{t | 1..s} = 0$ for $s = 1,\\ldots,t-1$."
    ]
@@ -285,8 +296,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-16T13:06:35.181476Z",
-     "start_time": "2019-09-16T13:06:35.171699Z"
+     "end_time": "2019-10-23T08:05:50.517446Z",
+     "start_time": "2019-10-23T08:05:50.462074Z"
     }
    },
    "outputs": [],
@@ -326,8 +337,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-16T13:06:35.196099Z",
-     "start_time": "2019-09-16T13:06:35.183528Z"
+     "end_time": "2019-10-23T08:05:50.589503Z",
+     "start_time": "2019-10-23T08:05:50.519528Z"
     }
    },
    "outputs": [],
@@ -344,14 +355,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### Ring queue (Subsection 6.3.4)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "We use the fact that removing a server from a ring queue gives a line queue.\n",
     "Specifically, after simplifications, we obtain that the expected number of customers in the ring queue is given by\n",
@@ -366,9 +381,10 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-16T13:06:35.211744Z",
-     "start_time": "2019-09-16T13:06:35.199599Z"
-    }
+     "end_time": "2019-10-23T08:05:50.644931Z",
+     "start_time": "2019-10-23T08:05:50.592037Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -400,8 +416,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-16T13:06:35.230878Z",
-     "start_time": "2019-09-16T13:06:35.218122Z"
+     "end_time": "2019-10-23T08:05:50.700495Z",
+     "start_time": "2019-10-23T08:05:50.646975Z"
     },
     "hidden": true
    },
@@ -437,8 +453,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-16T13:06:35.678731Z",
-     "start_time": "2019-09-16T13:06:35.233192Z"
+     "end_time": "2019-10-23T08:05:51.125199Z",
+     "start_time": "2019-10-23T08:05:50.703005Z"
     },
     "hidden": true
    },
@@ -452,8 +468,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-16T13:06:35.981281Z",
-     "start_time": "2019-09-16T13:06:35.681693Z"
+     "end_time": "2019-10-23T08:05:51.323417Z",
+     "start_time": "2019-10-23T08:05:51.126748Z"
     },
     "hidden": true
    },
@@ -497,8 +513,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-16T13:06:36.354654Z",
-     "start_time": "2019-09-16T13:06:35.982952Z"
+     "end_time": "2019-10-23T08:05:51.686277Z",
+     "start_time": "2019-10-23T08:05:51.325541Z"
     },
     "code_folding": [],
     "hidden": true
@@ -544,8 +560,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-16T13:06:36.575319Z",
-     "start_time": "2019-09-16T13:06:36.356794Z"
+     "end_time": "2019-10-23T08:05:51.943351Z",
+     "start_time": "2019-10-23T08:05:51.688498Z"
     },
     "hidden": true
    },
@@ -600,8 +616,8 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-16T13:06:37.245699Z",
-     "start_time": "2019-09-16T13:06:36.577935Z"
+     "end_time": "2019-10-23T08:05:52.414872Z",
+     "start_time": "2019-10-23T08:05:51.945470Z"
     },
     "hidden": true
    },
@@ -645,8 +661,8 @@
    "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-16T13:06:38.317676Z",
-     "start_time": "2019-09-16T13:06:37.249022Z"
+     "end_time": "2019-10-23T08:05:52.991198Z",
+     "start_time": "2019-10-23T08:05:52.417038Z"
     },
     "hidden": true
    },
@@ -690,8 +706,8 @@
    "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-16T13:06:38.332686Z",
-     "start_time": "2019-09-16T13:06:38.320121Z"
+     "end_time": "2019-10-23T08:05:53.001013Z",
+     "start_time": "2019-10-23T08:05:52.993536Z"
     },
     "hidden": true
    },
@@ -713,8 +729,8 @@
    "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-16T13:06:38.353095Z",
-     "start_time": "2019-09-16T13:06:38.335561Z"
+     "end_time": "2019-10-23T08:05:53.062040Z",
+     "start_time": "2019-10-23T08:05:53.003756Z"
     },
     "hidden": true
    },
@@ -744,8 +760,8 @@
    "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-16T13:06:39.116551Z",
-     "start_time": "2019-09-16T13:06:38.360599Z"
+     "end_time": "2019-10-23T08:05:53.337562Z",
+     "start_time": "2019-10-23T08:05:53.067045Z"
     },
     "hidden": true
    },
@@ -792,8 +808,8 @@
    "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-16T13:06:39.128839Z",
-     "start_time": "2019-09-16T13:06:39.118657Z"
+     "end_time": "2019-10-23T08:05:53.354614Z",
+     "start_time": "2019-10-23T08:05:53.340964Z"
     },
     "hidden": true
    },
@@ -822,8 +838,8 @@
    "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-16T13:06:39.142754Z",
-     "start_time": "2019-09-16T13:06:39.131781Z"
+     "end_time": "2019-10-23T08:05:53.428991Z",
+     "start_time": "2019-10-23T08:05:53.358236Z"
     },
     "hidden": true
    },
@@ -850,8 +866,8 @@
    "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-16T13:07:03.604311Z",
-     "start_time": "2019-09-16T13:06:39.145473Z"
+     "end_time": "2019-10-23T08:05:53.717803Z",
+     "start_time": "2019-10-23T08:05:53.432281Z"
     },
     "hidden": true
    },
@@ -888,8 +904,8 @@
    "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-16T13:07:03.616099Z",
-     "start_time": "2019-09-16T13:07:03.605987Z"
+     "end_time": "2019-10-23T08:05:53.731843Z",
+     "start_time": "2019-10-23T08:05:53.720332Z"
     },
     "hidden": true
    },
@@ -918,8 +934,8 @@
    "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-16T13:07:03.629936Z",
-     "start_time": "2019-09-16T13:07:03.619093Z"
+     "end_time": "2019-10-23T08:05:53.785612Z",
+     "start_time": "2019-10-23T08:05:53.737189Z"
     },
     "hidden": true
    },
@@ -946,8 +962,8 @@
    "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-16T13:07:05.469517Z",
-     "start_time": "2019-09-16T13:07:03.632106Z"
+     "end_time": "2019-10-23T08:05:54.008442Z",
+     "start_time": "2019-10-23T08:05:53.787761Z"
     },
     "hidden": true
    },
@@ -984,8 +1000,8 @@
    "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-16T13:07:05.482985Z",
-     "start_time": "2019-09-16T13:07:05.471822Z"
+     "end_time": "2019-10-23T08:05:54.019956Z",
+     "start_time": "2019-10-23T08:05:54.010372Z"
     },
     "hidden": true
    },
@@ -1015,8 +1031,8 @@
    "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-16T13:07:05.498903Z",
-     "start_time": "2019-09-16T13:07:05.485318Z"
+     "end_time": "2019-10-23T08:05:54.074527Z",
+     "start_time": "2019-10-23T08:05:54.022353Z"
     },
     "hidden": true
    },
@@ -1045,8 +1061,8 @@
    "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-16T13:07:24.858514Z",
-     "start_time": "2019-09-16T13:07:05.505960Z"
+     "end_time": "2019-10-23T08:05:54.315427Z",
+     "start_time": "2019-10-23T08:05:54.076823Z"
     },
     "hidden": true
    },
