Collapse sections in Notebook

--- a/6-performance-analysis-by-server-elimination/compute_and_plot.ipynb
+++ b/6-performance-analysis-by-server-elimination/compute_and_plot.ipynb
@@ -618,7 +618,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## 4. Impact of locality (Subsection 6.4.2)"
    ]
@@ -626,7 +628,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### Cost of heterogeneity and locality"
@@ -809,7 +812,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
     "### Impact of the parameters"
    ]
@@ -817,7 +823,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "#### Load $\\rho$"
@@ -913,7 +920,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "#### Parallelism degree $r$"
@@ -1009,7 +1017,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "#### Number $S$ of servers"
