--- a/5-performance-analysis-by-state-aggregation/plot.ipynb
+++ b/5-performance-analysis-by-state-aggregation/plot.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This Notebook plots the numerical results of Chapter 5 in the Ph.D. thesis *Resource management in computer clusters: algorithm design and performance analysis* by Céline Comte."
+    "This Notebook plots the numerical results for Chapter 5 in the Ph.D. thesis *Resource management in computer clusters: algorithm design and performance analysis* by Céline Comte."
    ]
   },
   {
