--- a/6-performance-analysis-by-server-elimination/compute_and_plot.ipynb
+++ b/6-performance-analysis-by-server-elimination/compute_and_plot.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This Notebook computes and plots the numerical results of Chapter 6 in the Ph.D. thesis *Resource management in computer clusters: algorithm design and performance analysis* by Céline Comte. Sections 1 and 2 of this Notebook define functions for computing the results, while Sections 3 and 4 effectively plot them. In parentheses, next to each section title, we give the reference to the corresponding section or subsection in the manuscript. We are interested by the probability $\\psi$ that the queue is empty and the expected number $L$ of customers in the queue."
+    "This Notebook computes and plots the numerical results for Chapter 6 in the Ph.D. thesis *Resource management in computer clusters: algorithm design and performance analysis* by Céline Comte. Sections 1 and 2 of this Notebook define functions for computing the results, while Sections 3 and 4 effectively plot them. In parentheses, next to each section title, we give the reference to the corresponding section or subsection in the manuscript. We are interested by the probability $\\psi$ that the queue is empty and the expected number $L$ of customers in the queue."
    ]
   },
   {
