--- a/8-load-balancing/plot.ipynb
+++ b/8-load-balancing/plot.ipynb
@@ -18,7 +18,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Package imports and global variable definitions"
    ]
@@ -30,7 +32,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-23T09:19:22.329887Z",
      "start_time": "2019-10-23T09:19:21.732720Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -53,6 +56,7 @@
      "end_time": "2019-10-23T09:19:22.335911Z",
      "start_time": "2019-10-23T09:19:22.332485Z"
     },
+    "hidden": true,
     "hide_input": false
    },
    "outputs": [],
@@ -72,7 +76,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-23T09:19:22.587121Z",
      "start_time": "2019-10-23T09:19:22.338946Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -87,7 +92,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-23T09:19:22.593050Z",
      "start_time": "2019-10-23T09:19:22.589045Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -98,14 +104,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## 1. A single job type"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "We consider the first scenario, in Section 8.3.1.\n",
     "There are $I = 10$ computers, each with $\\ell = 6$ tokens.\n",
@@ -122,7 +132,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-23T09:19:22.648894Z",
      "start_time": "2019-10-23T09:19:22.595625Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -134,6 +145,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "heading_collapsed": true,
+    "hidden": true,
     "hide_input": false
    },
    "source": [
@@ -148,6 +161,7 @@
      "end_time": "2019-10-23T09:19:22.778579Z",
      "start_time": "2019-10-23T09:19:22.651869Z"
     },
+    "hidden": true,
     "hide_input": false
    },
    "outputs": [],
@@ -167,6 +181,7 @@
      "end_time": "2019-10-23T09:19:23.396847Z",
      "start_time": "2019-10-23T09:19:22.780931Z"
     },
+    "hidden": true,
     "hide_input": true
    },
    "outputs": [
@@ -233,6 +248,7 @@
      "end_time": "2019-10-23T09:19:23.831301Z",
      "start_time": "2019-10-23T09:19:23.401115Z"
     },
+    "hidden": true,
     "hide_input": true
    },
    "outputs": [
@@ -283,6 +299,7 @@
      "end_time": "2019-10-23T09:19:24.083189Z",
      "start_time": "2019-10-23T09:19:23.833306Z"
     },
+    "hidden": true,
     "hide_input": true
    },
    "outputs": [
@@ -329,7 +346,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
     "### Per-computer metrics"
    ]
@@ -342,6 +362,7 @@
      "end_time": "2019-10-23T09:19:24.126388Z",
      "start_time": "2019-10-23T09:19:24.088359Z"
     },
+    "hidden": true,
     "hide_input": false
    },
    "outputs": [],
@@ -361,6 +382,7 @@
      "start_time": "2019-10-23T09:19:24.128390Z"
     },
     "cell_style": "center",
+    "hidden": true,
     "hide_input": true
    },
    "outputs": [
@@ -412,7 +434,8 @@
      "start_time": "2019-10-23T09:19:24.524941Z"
     },
     "cell_style": "center",
-    "hide_input": false
+    "hidden": true,
+    "hide_input": true
    },
    "outputs": [
     {
@@ -454,6 +477,7 @@
      "end_time": "2019-10-23T09:19:25.084618Z",
      "start_time": "2019-10-23T09:19:24.816076Z"
     },
+    "hidden": true,
     "hide_input": true
    },
    "outputs": [
@@ -507,7 +531,8 @@
      "end_time": "2019-10-23T09:19:25.457554Z",
      "start_time": "2019-10-23T09:19:25.089824Z"
     },
-    "hide_input": false
+    "hidden": true,
+    "hide_input": true
    },
    "outputs": [
     {
@@ -557,6 +582,7 @@
      "end_time": "2019-10-23T09:19:25.710389Z",
      "start_time": "2019-10-23T09:19:25.459479Z"
     },
+    "hidden": true,
     "hide_input": true
    },
    "outputs": [
@@ -606,7 +632,8 @@
      "end_time": "2019-10-23T09:19:25.990422Z",
      "start_time": "2019-10-23T09:19:25.712205Z"
     },
-    "hide_input": false,
+    "hidden": true,
+    "hide_input": true,
     "scrolled": false
    },
    "outputs": [
@@ -644,7 +671,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
     "### Impact of the number of tokens"
    ]
@@ -656,7 +686,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-23T09:19:25.996410Z",
      "start_time": "2019-10-23T09:19:25.993089Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -671,7 +702,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-23T09:19:26.063092Z",
      "start_time": "2019-10-23T09:19:25.999166Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -687,6 +719,7 @@
      "end_time": "2019-10-23T09:19:26.349782Z",
      "start_time": "2019-10-23T09:19:26.064951Z"
     },
+    "hidden": true,
     "hide_input": true
    },
    "outputs": [
@@ -728,6 +761,7 @@
      "end_time": "2019-10-23T09:19:27.145401Z",
      "start_time": "2019-10-23T09:19:26.352470Z"
     },
+    "hidden": true,
     "hide_input": true,
     "scrolled": false
    },
@@ -766,6 +800,7 @@
      "end_time": "2019-10-23T09:19:27.356931Z",
      "start_time": "2019-10-23T09:19:27.147682Z"
     },
+    "hidden": true,
     "hide_input": true
    },
    "outputs": [
@@ -804,6 +839,7 @@
      "end_time": "2019-10-23T09:19:27.570251Z",
      "start_time": "2019-10-23T09:19:27.359373Z"
     },
+    "hidden": true,
     "hide_input": true
    },
    "outputs": [
@@ -836,14 +872,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## 2. Two job types"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "We consider the second scenario, in Section 8.3.2.\n",
     "There are $I = 10$ computers, each with $\\ell = 6$ tokens.\n",
@@ -863,7 +903,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-23T09:19:27.579769Z",
      "start_time": "2019-10-23T09:19:27.574399Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -875,6 +916,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "heading_collapsed": true,
+    "hidden": true,
     "hide_input": true
    },
    "source": [
@@ -888,7 +931,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-23T09:19:27.677475Z",
      "start_time": "2019-10-23T09:19:27.584195Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -907,6 +951,7 @@
      "end_time": "2019-10-23T09:19:28.111023Z",
      "start_time": "2019-10-23T09:19:27.679294Z"
     },
+    "hidden": true,
     "hide_input": true
    },
    "outputs": [
@@ -980,6 +1025,7 @@
      "start_time": "2019-10-23T09:19:28.113728Z"
     },
     "cell_style": "center",
+    "hidden": true,
     "hide_input": true
    },
    "outputs": [
@@ -1035,6 +1081,7 @@
      "start_time": "2019-10-23T09:19:28.424680Z"
     },
     "cell_style": "center",
+    "hidden": true,
     "hide_input": true
    },
    "outputs": [
@@ -1083,7 +1130,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
     "### Per-computer metrics"
    ]
@@ -1096,6 +1146,7 @@
      "end_time": "2019-10-23T09:19:28.798041Z",
      "start_time": "2019-10-23T09:19:28.763606Z"
     },
+    "hidden": true,
     "hide_input": false
    },
    "outputs": [],
@@ -1114,6 +1165,7 @@
      "end_time": "2019-10-23T09:19:29.104171Z",
      "start_time": "2019-10-23T09:19:28.801487Z"
     },
+    "hidden": true,
     "hide_input": true
    },
    "outputs": [
@@ -1167,6 +1219,7 @@
      "end_time": "2019-10-23T09:19:29.409648Z",
      "start_time": "2019-10-23T09:19:29.106793Z"
     },
+    "hidden": true,
     "hide_input": true
    },
    "outputs": [
@@ -1221,6 +1274,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "heading_collapsed": true,
+    "hidden": true,
     "hide_input": true
    },
    "source": [
@@ -1234,7 +1289,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-23T09:19:29.450456Z",
      "start_time": "2019-10-23T09:19:29.412220Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -1252,6 +1308,7 @@
      "end_time": "2019-10-23T09:19:29.738061Z",
      "start_time": "2019-10-23T09:19:29.452279Z"
     },
+    "hidden": true,
     "hide_input": true
    },
    "outputs": [
@@ -1316,6 +1373,7 @@
      "start_time": "2019-10-23T09:19:29.740473Z"
     },
     "cell_style": "center",
+    "hidden": true,
     "hide_input": true
    },
    "outputs": [
@@ -1388,6 +1446,7 @@
      "start_time": "2019-10-23T09:19:30.154338Z"
     },
     "cell_style": "center",
+    "hidden": true,
     "hide_input": true
    },
    "outputs": [
@@ -1485,6 +1544,7 @@
      "start_time": "2019-10-23T09:19:30.583480Z"
     },
     "cell_style": "center",
+    "hidden": true,
     "hide_input": true
    },
    "outputs": [
@@ -1565,6 +1625,7 @@
      "end_time": "2019-10-23T09:19:31.294189Z",
      "start_time": "2019-10-23T09:19:30.974271Z"
     },
+    "hidden": true,
     "hide_input": true
    },
    "outputs": [
@@ -1628,7 +1689,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "We verify the maximum width of the asymptotic confidence intervals for the metrics that are plotted in the paper:"
    ]
@@ -1641,6 +1704,7 @@
      "end_time": "2019-10-23T09:19:31.305824Z",
      "start_time": "2019-10-23T09:19:31.296113Z"
     },
+    "hidden": true,
     "hide_input": false
    },
    "outputs": [
@@ -1669,6 +1733,7 @@
      "end_time": "2019-10-23T09:19:31.359942Z",
      "start_time": "2019-10-23T09:19:31.307773Z"
     },
+    "hidden": true,
     "hide_input": false
    },
    "outputs": [
@@ -1693,14 +1758,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "For the simulation results presented in the manuscript, the values were as follows:"
    ]
   },
   {
    "cell_type": "raw",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Maximum width of the asymptotic 95% confidence interval with the exponential job size distribution:\n",
     "Lk1 : 0.001653\n",
@@ -1709,7 +1778,9 @@
   },
   {
    "cell_type": "raw",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Maximum width of the asymptotic 95% confidence interval with the hyperexponential job size distribution:\n",
     "betak1 : 0.000048\n",
